samples/_failures_safe/1761205211_50d2a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc20ef14.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_dc20ef14.c:157:12: error: missing terminating " character
  157 |     printf("Data Count: %u/%u
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dc20ef14.c:157:5: error: expected expression at end of input
  157 |     printf("Data Count: %u/%u
      |     ^~~~~~
./samples/SAFE/__tmp_dc20ef14.c:157:5: error: expected declaration or statement at end of input
